Working jpackage with java17