@@ -14,10 +14,26 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.major.version>17</java.major.version>
+        <maven.compiler.source>${java.major.version}</maven.compiler.source>
+        <maven.compiler.release>${java.major.version}</maven.compiler.release>
+        <maven.compiler.target>${java.major.version}</maven.compiler.target>
+        <javafx.version>${java.major.version}.0.1</javafx.version>
         <mainClass>net.imagini.jzookeeperedit.fx.MainApp</mainClass>
         <slf4j.version>1.7.25</slf4j.version>
-        <java.base.version>11</java.base.version>
-        <java.version>${java.base.version}</java.version>
+        <controlsfx.version>11.1.0</controlsfx.version>
+        <jvm.modules>javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.base</jvm.modules>
+        <app.name>JZookeeperEdit</app.name>
+        <!-- This converts the build timestamp to a Windows-installer friendly version number (minute level resolution).
+        Note that Maven generated timestamp is in UTC, not local time. For more information see:
+         https://docs.microsoft.com/en-us/windows/win32/msi/productversion
+         https://docs.oracle.com/en/java/javase/15/docs/api/java.base/java/text/SimpleDateFormat.html
+         -->
+        <maven.build.timestamp.format>yy.ww.WWkkmm</maven.build.timestamp.format>
+        <app.version>${maven.build.timestamp}</app.version>
+        <windows.upgrade.uuid>242490a4-07a9-48ae-920c-bbd3b7a8dc9c</windows.upgrade.uuid>
+        <!-- This is used to set many user-visible fields in the Windows Installer. See jpackage.txt -->
+        <windows.vendor>JZookeeperEdit</windows.vendor>
     </properties>
 
     <organization>
@@ -61,7 +77,7 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
-            <version>4.0.1</version>
+            <version>5.2.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.zookeeper</groupId>
@@ -72,22 +88,30 @@
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
-            <version>3.4.14</version>
+            <version>3.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>${java.base.version}</version>
+            <version>${javafx.version}</version>
+            <classifier>${platform}</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>${javafx.version}</version>
+            <classifier>${platform}</classifier>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>${java.base.version}</version>
+            <version>${javafx.version}</version>
+            <classifier>${platform}</classifier>
         </dependency>
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>${java.base.version}.0.0</version>
+            <version>${controlsfx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -131,37 +155,187 @@
         </dependency>
     </dependencies>
     <build>
+        <resources>
+            <resource>
+                <!-- Here we are processing the platform-specific jpackage command files, adding in Maven
+                 properties for configuration. -->
+                <directory>${project.basedir}/src/main/deploy</directory>
+                <filtering>true</filtering>
+                <targetPath>${project.build.directory}/packaging</targetPath>
+            </resource>
+            <!-- Add the default resource path back in - by overriding above it disables the default -->
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </resource>
+        </resources>
+
         <finalName>${project.artifactId}</finalName>
+
         <pluginManagement>
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>3.7.1</version>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.1.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>3.0.0-M1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.2.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
                     <version>3.1.1</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.2.0</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.9.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M5</version>
+                </plugin>
             </plugins>
         </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <artifactId>maven-resources-plugin</artifactId>
                 <configuration>
-                    <release>${java.version}</release>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <showDeprecation>true</showDeprecation>
+                    <nonFilteredFileExtensions>
+                        <nonFilteredFileExtension>icns</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>png</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>ico</nonFilteredFileExtension>
+                    </nonFilteredFileExtensions>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <artifactId>maven-install-plugin</artifactId>
+                <configuration>
+                    <!-- This is an app, so we don't want to install it in the local Maven repository -->
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <!-- This copies all of the jar files declared by the Maven build into a single directory.
+                        This makes it easy to assemble the final installer package -->
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <!-- The JavaFX libraries are bundled into the custom JVM, so we don't want to duplicate
+                            them in the bundled app and installer. This command skips all of the JavaFX by groupId. -->
+                            <excludeGroupIds>org.openjfx</excludeGroupIds>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <!-- Put the application jar generated by the project into the dependency folder - the default folder
+                for the maven-dependency-plugin output. -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>${project.build.directory}/dependency</outputDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.5</version>
+                <configuration>
+                    <mainClass>${mainClass}</mainClass>
+                    <options>
+                        <option>--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED</option>
+                    </options>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!-- https://github.com/wiverson/jtoolprovider-plugin -->
+                <groupId>io.github.wiverson</groupId>
+                <artifactId>jtoolprovider-plugin</artifactId>
+                <version>1.0.34</version>
+                <executions>
+                    <!-- This command runs jlink, generating a custom JVM by combining the JavaFX modules bundled in
+                    this project with the JDK modules. -->
+                    <execution>
+                        <id>jlink</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>java-tool</goal>
+                        </goals>
+                        <configuration>
+                            <toolName>jlink</toolName>
+                            <removeDirectories>${project.build.directory}/jvm-image/</removeDirectories>
+                            <modulePath>${project.build.directory}/jmods/
+                            </modulePath>
+                            <addModules>${jvm.modules}</addModules>
+                            <output>${project.build.directory}/jvm-image</output>
+                            <args>
+                                <arg>--strip-native-commands</arg>
+                                <arg>--no-header-files</arg>
+                                <arg>--strip-debug</arg>
+                                <arg>--no-man-pages</arg>
+                                <arg>--compress=2</arg>
+                            </args>
+                        </configuration>
+                    </execution>
+                    <!-- The command that actually generates the installer. The options for each platform
+                    are found the /src/main/deploy directory. These files are copied into the target directory by
+                    the Maven resources plugin, which does the filtering to replace the original values with
+                    the actual Maven properties.
+                    https://github.com/wiverson/jtoolprovider-plugin/blob/main/java-tool-doc.md
+                    -->
+                    <execution>
+                        <id>jpackage</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>java-tool</goal>
+                        </goals>
+                        <configuration>
+                            <toolName>jpackage</toolName>
+                            <removeDirectories>${project.build.directory}/installer-work</removeDirectories>
+                            <args>@${project.build.directory}/packaging/package/${platform}/jpackage.txt</args>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <release>${maven.compiler.release}</release>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -192,37 +366,11 @@
                 <artifactId>spotbugs-maven-plugin</artifactId>
                 <version>4.1.4</version>
             </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.5</version>
-                <configuration>
-                    <mainClass>${mainClass}</mainClass>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>com.gluonhq</groupId>
-                <artifactId>client-maven-plugin</artifactId>
-                <version>0.1.33</version>
-                <configuration>
-                    <target>host</target>
-                    <mainClass>${mainClass}</mainClass>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>create-native</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
 
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.6</version>
+                <version>0.8.7</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
@@ -291,7 +439,99 @@
                         </reports>
                     </reportSet>
                 </reportSets>
+                <configuration>
+                    <processDependencyManagementTransitive>false</processDependencyManagementTransitive>
+                </configuration>
             </plugin>
         </plugins>
     </reporting>
+
+    <profiles>
+        <profile>
+            <id>unix</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                </os>
+            </activation>
+            <properties>
+                <platform>linux</platform>
+                <jmods.platform>linux</jmods.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <properties>
+                <platform>mac</platform>
+                <jmods.platform>osx</jmods.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <properties>
+                <platform>win</platform>
+                <jmods.platform>windows</jmods.platform>
+            </properties>
+        </profile>
+        <profile>
+            <id>download-jmods</id>
+            <activation>
+                <file>
+                    <missing>target/jmods/javafx.base.jmod</missing>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>wagon-maven-plugin</artifactId>
+                        <version>2.0.2</version>
+                        <executions>
+                            <execution>
+                                <id>download-jmods</id>
+                                <phase>generate-resources</phase>
+                                <goals>
+                                    <goal>download-single</goal>
+                                </goals>
+                                <configuration>
+                                    <url>https://download2.gluonhq.com</url>
+                                    <fromFile>openjfx/${javafx.version}/openjfx-${javafx.version}_${jmods.platform}-x64_bin-jmods.zip</fromFile>
+                                    <toFile>${project.build.directory}/jmods.zip</toFile>
+                                    <skipIfExists>false</skipIfExists>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>truezip-maven-plugin</artifactId>
+                        <version>1.2</version>
+                        <executions>
+                            <execution>
+                                <id>unpack-jmods</id>
+                                <goals>
+                                    <goal>move</goal>
+                                </goals>
+                                <phase>generate-resources</phase>
+                                <configuration>
+                                    <from>${project.build.directory}/jmods.zip/javafx-jmods-${javafx.version}</from>
+                                    <to>${project.build.directory}/jmods</to>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
